--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!--header-->
+    <header></header>
+    <main>
+      <!--hero-->
+      <section></section>
+      <!--KEY FEATURES-->
+      <section></section>
+      <!--OUR TEAM-->
+      <section></section>
+      <!--WHAT OUR COSTUMER’S SAY-->
+      <section></section>
+    </main>
+    <!--CONTACT US-->
+    <footer></footer>
+  </body>
 </html>
