--- a/index.html
+++ b/index.html
@@ -8,15 +8,35 @@
   </head>
   <body>
     <!--header-->
-    <header></header>
+    <header>
+      <nav>
+        <a href="./index.html">Mobileapp</a>
+        <ul>
+          <li><a href=""></a>HOME</li>
+          <li><a href=""></a>FEATURES</li>
+          <li><a href=""></a>TEAM</li>
+          <li><a href=""></a>TESTIMONIALS</li>
+          <li><a href=""></a>CONTACT</li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <!--hero-->
-      <section></section>
+      <section>
+        <h1>Introducing Mobileapp</h1>
+        <p>Download our mobile app today!</p>
+        <ul>
+          <li>Real-time updates and notifications for timely information</li>
+          <li>Robust analytics and reporting for data-driven insights</li>
+          <li>Offline capabilities for uninterrupted use</li>
+        </ul>
+        <button type="button">Download</button>
+      </section>
       <!--KEY FEATURES-->
       <section></section>
       <!--OUR TEAM-->
       <section></section>
-      <!--WHAT OUR COSTUMER’S SAY-->
+      <!--WHAT OUR COSTUMERS SAY-->
       <section></section>
     </main>
     <!--CONTACT US-->
