--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       </section>
       <!--KEY FEATURES-->
       <section></section>
+      <!--WATCH THE VIDEO-->
+      <section></section>
       <!--OUR TEAM-->
       <section></section>
       <!--WHAT OUR COSTUMERS SAY-->
