added with watch video

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
       </section>
       <!--KEY FEATURES-->
       <section></section>
+      <!--WATCH THE VIDEO-->
+      <section>
+        <h2>WATCH THE VIDEO</h2>
+        <p>Watch the video below to see our mobile app in action. With a user-friendly interface, personalized recommendations, secure transactions, and real-time updates, our app is available for download on both Apple and Android devices and is designed to make your life easier.</p>
+        <a href="#">
+          <img src="./images/android.png" alt="Photo Android" width="60" height="60">
+        </a>
+        <a href="#">
+          <img src="./images/iphone.png" alt="Photo Iphone" width="60" height="60">
+        </a>
+        <a href="#">
+          <img src="./images/iPhone X Flying.png" alt="Photo Iphone" width="501" height="282">
+        </a>
+      </section>
       <!--OUR TEAM-->
       <section></section>
       <!--WHAT OUR COSTUMERS SAY-->
