--- a/index.html
+++ b/index.html
@@ -33,23 +33,157 @@
         <button type="button">Download</button>
       </section>
       <!--KEY FEATURES-->
-      <section></section>
+      <section>
+        <h2>KEY FEATURES</h2>
+        <p>
+          Get the best mobile experience with our Mobileapp. With a
+          user-friendly interface, personalized recommendations, secure
+          transactions, and real-time updates, our app offers everything you
+          need to stay connected and productive
+        </p>
+        <img
+          src="./images/key-features.jpg"
+          alt="A man with a laptop sits in a chair and he has an idea"
+        />
+        <ul>
+          <li>
+            <h3>User-Friendly Interface:</h3>
+            <p>
+              Intuitive and easy-to-navigate interface designed to provide a
+              seamless mobile experience for users.
+            </p>
+          </li>
+          <li>
+            <h3>Personalized Recommendations:</h3>
+            <p>
+              The app provides personalized recommendations based on user
+              preferences and behavior, allowing for more relevant content and a
+              more engaging experience.
+            </p>
+          </li>
+          <li>
+            <h3>Real-Time Updates:</h3>
+            <p>
+              Users receive real-time updates and notifications to stay informed
+              on important news and events, and to stay up-to-date with changes
+              to the app.
+            </p>
+          </li>
+          <li>
+            <h3>Integration with Other Apps:</h3>
+            <p>
+              The app integrates with other popular apps, making it easy for
+              users to connect with their social media accounts, or to easily
+              make in-app purchases using their preferred payment method.
+            </p>
+          </li>
+          <li>
+            <h3>Multi-Language Support:</h3>
+            <p>
+              The app is designed to be accessible to users all around the
+              world, with support for multiple languages, making it easier for
+              people to use the app in their native language.
+            </p>
+          </li>
+          <li>
+            <h3>Offline Capabilities:</h3>
+            <p>
+              The app offers offline capabilities, allowing users to access
+              certain features and content even when they are not connected to
+              the internet.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!--WATCH THE VIDEO-->
       <section>
         <h2>WATCH THE VIDEO</h2>
-        <p>Watch the video below to see our mobile app in action. With a user-friendly interface, personalized recommendations, secure transactions, and real-time updates, our app is available for download on both Apple and Android devices and is designed to make your life easier.</p>
+        <p>
+          Watch the video below to see our mobile app in action. With a
+          user-friendly interface, personalized recommendations, secure
+          transactions, and real-time updates, our app is available for download
+          on both Apple and Android devices and is designed to make your life
+          easier.
+        </p>
         <a href="#">
-          <img src="./images/android.png" alt="Photo Android" width="60" height="60">
+          <img
+            src="./images/android.png"
+            alt="Photo Android"
+            width="60"
+            height="60"
+          />
         </a>
         <a href="#">
-          <img src="./images/iphone.png" alt="Photo Iphone" width="60" height="60">
+          <img
+            src="./images/iphone.png"
+            alt="Photo Iphone"
+            width="60"
+            height="60"
+          />
         </a>
         <a href="#">
-          <img src="./images/iPhone X Flying.png" alt="Photo Iphone" width="501" height="282">
+          <img
+            src="./images/iPhone X Flying.png"
+            alt="Photo Iphone"
+            width="501"
+            height="282"
+          />
         </a>
       </section>
       <!--OUR TEAM-->
-      <section></section>
+      <section>
+        <h2>OUR TEAM</h2>
+
+        <p>
+          Our team is made up of talented and passionate individuals who are
+          committed to providing the best experience for our users. Each member
+          br ings a unique set of skills and expertise to the table, allowing us
+          to work collaboratively and effectively to achieve our goals.
+        </p>
+
+        <ul>
+          <li>
+            <img
+              src="./images/david-patel.jpg"
+              alt="David Patel Managing Direcor"
+              width="264"
+              height="260"
+            />
+            <h3>David Patel</h3>
+            <p>Managing Direcor</p>
+          </li>
+          <li>
+            <img
+              src="./images/rachel-kim.jpg"
+              alt="Rachel Kim Lead Designer"
+              width="264"
+              height="260"
+            />
+            <h3>Rachel Kim</h3>
+            <p>Lead Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/samantha-chen.jpg"
+              alt="Samantha Chen Lead Developer"
+              width="264"
+              height="260"
+            />
+            <h3>Samantha Chen</h3>
+            <p>Lead Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/andrew-nguyen.jpg"
+              alt="Andrew Nguyen Sr. UI Designer"
+              width="264"
+              height="260"
+            />
+            <h3>Andrew Nguyen</h3>
+            <p>Sr. UI Designer</p>
+          </li>
+        </ul>
+      </section>
       <!--WHAT OUR COSTUMERS SAY-->
       <section></section>
     </main>
