--- a/our-team.html
+++ b/our-team.html
@@ -9,7 +9,7 @@
   <ul>
     <li>
       <img
-        src="./images/david-patel.jpg"
+        src="./images/our-team/david-patel.jpg"
         alt="David Patel Managing Direcor"
         width="264"
         height="260"
@@ -19,7 +19,7 @@
     </li>
     <li>
       <img
-        src="./images/rachel-kim.jpg"
+        src="./images/our-team/rachel-kim.jpg"
         alt="Rachel Kim Lead Designer"
         width="264"
         height="260"
@@ -29,7 +29,7 @@
     </li>
     <li>
       <img
-        src="./images/samantha-chen.jpg"
+        src="./images/our-team/samantha-chen.jpg"
         alt="Samantha Chen Lead Developer"
         width="264"
         height="260"
@@ -39,7 +39,7 @@
     </li>
     <li>
       <img
-        src="./images/andrew-nguyen.jpg"
+        src="./images/our-team/andrew-nguyen.jpg"
         alt="Andrew Nguyen Sr. UI Designer"
         width="264"
         height="260"
