--- a/contact-us.html
+++ b/contact-us.html
@@ -4,37 +4,66 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/footer.css" />
+
     <title>Contact Us</title>
   </head>
   <body>
     <header></header>
     <main></main>
     <footer>
-      <section>
-        <h2>CONTACT US</h2>
-        <ul>
+      <section class="footer-section">
+        <h2 class="footer-title">CONTACT US</h2>
+        <ul class="footer-list list">
           <li>
-            <p>Get in touch with us</p>
+            <h3 class="footer-subtitle">Get in touch with us</h3>
           </li>
           <li>
-            <p>
+            <p class="footer-text">
               Have a question or comment about our app? Get in touch with us
               using the contact form below and our team will respond shortly.
             </p>
           </li>
         </ul>
-        <ul>
-          <li><a href="https://www.facebook.com/">Facebook</a></li>
-          <li><a href="https://twitter.com/">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/">Linkidin</a></li>
+        <ul class="list">
+          <li>
+            <a class="footer-link link" href="https://www.facebook.com/"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a class="footer-link link" href="https://twitter.com/">Twitter</a>
+          </li>
+          <li>
+            <a class="footer-link link" href="https://www.linkedin.com/"
+              >Linkidin</a
+            >
+          </li>
         </ul>
         <address>
-          <ul>
-            <li><a href="tel:+xxxxxxxxxxxx"></a>+xx-xxxx-xxxx-xx</li>
-            <li><a href="mailto:goIteens@gmail.com">goIteens@gmail.com</a></li>
+          <ul class="list">
+            <li>
+              <a class="footer-phone link" href="tel:+xxxxxxxxxxxx"></a
+              >+xx-xxxx-xxxx-xx
+            </li>
+            <li>
+              <a class="footer-mail link" href="mailto:goIteens@gmail.com"
+                >goIteens@gmail.com</a
+              >
+            </li>
           </ul>
         </address>
-        <div>&#169; 2019 GoIteens Template. All Rights Reserved</div>
+        <div class="footer-copyright">
+          &#169; 2019 GoIteens Template. All Rights Reserved
+        </div>
 
         <!-- &#169; copyright -->
       </section>
