--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
   <body>
     <!--header-->
     <header>
-      <nav>
-        <a href="./index.html">Mobileapp</a>
-        <ul>
-          <li><a href=""></a>HOME</li>
-          <li><a href=""></a>FEATURES</li>
-          <li><a href=""></a>TEAM</li>
-          <li><a href=""></a>TESTIMONIALS</li>
-          <li><a href=""></a>CONTACT</li>
-        </ul>
-      </nav>
+      <div class="head-nav">
+        <nav>
+          <a href="./index.html" class="link">Mobileapp</a>
+          <ul class="list">
+            <li><a href="" class="link"></a>HOME</li>
+            <li><a href="" class="link"></a>FEATURES</li>
+            <li><a href="" class="link"></a>TEAM</li>
+            <li><a href="" class="link"></a>TESTIMONIALS</li>
+            <li><a href="" class="link"></a>CONTACT</li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <!--hero-->
