--- a/index.html
+++ b/index.html
@@ -5,26 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--header-->
     <header>
-      <div class="head-nav">
-        <nav>
-          <a href="./index.html" class="link">Mobileapp</a>
-          <ul class="list">
-            <li><a href="" class="link"></a>HOME</li>
-            <li><a href="" class="link"></a>FEATURES</li>
-            <li><a href="" class="link"></a>TEAM</li>
-            <li><a href="" class="link"></a>TESTIMONIALS</li>
-            <li><a href="" class="link"></a>CONTACT</li>
+      <div class="container">
+        <nav class="head-nav">
+          <a href="./index.html" class="head-logo link">Mobileapp</a>
+          <ul class="head-list list">
+            <li>
+              <a href="./index.html" class="link">HOME</a>
+            </li>
+            <li>
+              <a href="#features" class="link">FEATURES</a>
+            </li>
+            <li>
+              <a href="#team" class="link">TEAM</a>
+            </li>
+            <li>
+              <a href="#testimonials" class="link">TESTIMONIALS</a>
+            </li>
+            <li>
+              <a href="#contact" class="link">CONTACT</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -32,18 +46,20 @@
     <main>
       <!--hero-->
       <section>
-        <h1>Introducing Mobileapp</h1>
-        <p>Download our mobile app today!</p>
-        <ul>
-          <li>Real-time updates and notifications for timely information</li>
-          <li>Robust analytics and reporting for data-driven insights</li>
-          <li>Offline capabilities for uninterrupted use</li>
-        </ul>
-        <button type="button">Download</button>
+        <div class="container hero">
+          <h1 class="hero-head">Introducing Mobileapp</h1>
+          <p class="hero-text">Download our mobile app today!</p>
+          <ul class="list">
+            <li>Real-time updates and notifications for timely information</li>
+            <li>Robust analytics and reporting for data-driven insights</li>
+            <li>Offline capabilities for uninterrupted use</li>
+          </ul>
+          <button type="button">Download</button>
+        </div>
       </section>
       <!--KEY FEATURES-->
       <section>
-        <h2>KEY FEATURES</h2>
+        <h2 id="features">KEY FEATURES</h2>
         <p>
           Get the best mobile experience with our Mobileapp. With a
           user-friendly interface, personalized recommendations, secure
@@ -114,7 +130,7 @@
           on both Apple and Android devices and is designed to make your life
           easier.
         </p>
-        <a href="#">
+        <a href="">
           <img
             src="./images/android.png"
             alt="Photo Android"
@@ -122,7 +138,7 @@
             height="60"
           />
         </a>
-        <a href="#">
+        <a href="">
           <img
             src="./images/iphone.png"
             alt="Photo Iphone"
@@ -130,7 +146,7 @@
             height="60"
           />
         </a>
-        <a href="#">
+        <a href="">
           <img
             src="./images/iPhone X Flying.png"
             alt="Photo Iphone"
@@ -141,7 +157,7 @@
       </section>
       <!--OUR TEAM-->
       <section>
-        <h2>OUR TEAM</h2>
+        <h2 id="team">OUR TEAM</h2>
 
         <p>
           Our team is made up of talented and passionate individuals who are
@@ -194,11 +210,13 @@
         </ul>
       </section>
       <!--WHAT OUR COSTUMERS SAY-->
-      <section></section>
+      <section>
+        <h2 id="testimonials">WHAT OUR COSTUMER’S SAY</h2>
+      </section>
     </main>
     <!--CONTACT US-->
     <footer>
-      <h2>CONTACT US</h2>
+      <h2 id="#contact">CONTACT US</h2>
       <ul>
         <li>
           <p>Get in touch with us</p>
