--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--header-->
     <header>
-      <div class="container">
+      <div class="container header">
         <nav class="head-nav">
           <a href="./index.html" class="head-logo link">Mobileapp</a>
           <ul class="head-list list">
@@ -49,76 +49,85 @@
         <div class="container hero">
           <h1 class="hero-head">Introducing Mobileapp</h1>
           <p class="hero-text">Download our mobile app today!</p>
-          <ul class="list">
-            <li>Real-time updates and notifications for timely information</li>
-            <li>Robust analytics and reporting for data-driven insights</li>
-            <li>Offline capabilities for uninterrupted use</li>
+          <ul class="list hero-list">
+            <li class="item hero-item">
+              Real-time updates and notifications for timely information
+            </li>
+            <li class="item hero-item">
+              Robust analytics and reporting for data-driven insights
+            </li>
+            <li class="item hero-item">
+              Offline capabilities for uninterrupted use
+            </li>
           </ul>
-          <button type="button">Download</button>
+          <button class="hero-button" type="button">Download</button>
+          <img class="hero-mobile" src="../images/hero/mobile.png" alt="" />
         </div>
       </section>
       <!--KEY FEATURES-->
       <section>
-        <h2 id="features">KEY FEATURES</h2>
-        <p>
-          Get the best mobile experience with our Mobileapp. With a
-          user-friendly interface, personalized recommendations, secure
-          transactions, and real-time updates, our app offers everything you
-          need to stay connected and productive
-        </p>
-        <img
-          src="./images/key-features.jpg"
-          alt="A man with a laptop sits in a chair and he has an idea"
-        />
-        <ul>
-          <li>
-            <h3>User-Friendly Interface:</h3>
-            <p>
-              Intuitive and easy-to-navigate interface designed to provide a
-              seamless mobile experience for users.
-            </p>
-          </li>
-          <li>
-            <h3>Personalized Recommendations:</h3>
-            <p>
-              The app provides personalized recommendations based on user
-              preferences and behavior, allowing for more relevant content and a
-              more engaging experience.
-            </p>
-          </li>
-          <li>
-            <h3>Real-Time Updates:</h3>
-            <p>
-              Users receive real-time updates and notifications to stay informed
-              on important news and events, and to stay up-to-date with changes
-              to the app.
-            </p>
-          </li>
-          <li>
-            <h3>Integration with Other Apps:</h3>
-            <p>
-              The app integrates with other popular apps, making it easy for
-              users to connect with their social media accounts, or to easily
-              make in-app purchases using their preferred payment method.
-            </p>
-          </li>
-          <li>
-            <h3>Multi-Language Support:</h3>
-            <p>
-              The app is designed to be accessible to users all around the
-              world, with support for multiple languages, making it easier for
-              people to use the app in their native language.
-            </p>
-          </li>
-          <li>
-            <h3>Offline Capabilities:</h3>
-            <p>
-              The app offers offline capabilities, allowing users to access
-              certain features and content even when they are not connected to
-              the internet.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 id="features">KEY FEATURES</h2>
+          <p>
+            Get the best mobile experience with our Mobileapp. With a
+            user-friendly interface, personalized recommendations, secure
+            transactions, and real-time updates, our app offers everything you
+            need to stay connected and productive
+          </p>
+          <img
+            src="./images/key-features.jpg"
+            alt="A man with a laptop sits in a chair and he has an idea"
+          />
+          <ul>
+            <li>
+              <h3>User-Friendly Interface:</h3>
+              <p>
+                Intuitive and easy-to-navigate interface designed to provide a
+                seamless mobile experience for users.
+              </p>
+            </li>
+            <li>
+              <h3>Personalized Recommendations:</h3>
+              <p>
+                The app provides personalized recommendations based on user
+                preferences and behavior, allowing for more relevant content and
+                a more engaging experience.
+              </p>
+            </li>
+            <li>
+              <h3>Real-Time Updates:</h3>
+              <p>
+                Users receive real-time updates and notifications to stay
+                informed on important news and events, and to stay up-to-date
+                with changes to the app.
+              </p>
+            </li>
+            <li>
+              <h3>Integration with Other Apps:</h3>
+              <p>
+                The app integrates with other popular apps, making it easy for
+                users to connect with their social media accounts, or to easily
+                make in-app purchases using their preferred payment method.
+              </p>
+            </li>
+            <li>
+              <h3>Multi-Language Support:</h3>
+              <p>
+                The app is designed to be accessible to users all around the
+                world, with support for multiple languages, making it easier for
+                people to use the app in their native language.
+              </p>
+            </li>
+            <li>
+              <h3>Offline Capabilities:</h3>
+              <p>
+                The app offers offline capabilities, allowing users to access
+                certain features and content even when they are not connected to
+                the internet.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--WATCH THE VIDEO-->
       <section>
